# ts-cpp-analyzer

./: Cargo.toml  README.md
examples/: custom_queries.rs  simple_analyzer.rs
src/: analyzer.rs  lib.rs  main.rs
src/analyzer/: analyzer.rs  lib.rs  query.rs
src/languages/: cpp.rs
src/test/: mod.rs
src/test/cases/: cpp.rs
src/test/runner/: macros.rs  mod.rs
src/tests/: cpp_tests.rs  mod.rs  test_helpers.rs
